Restructure and add a makerelease.command script

--- a/CreativeDeveloperTools_UXP/index.html
+++ b/CreativeDeveloperTools_UXP/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="wrapper">
-    <p> Congratulations! You just created your first plugin.</p>
+    <p>Creative Developer Tools for UXP Sample Extension</p>
   </div>
 </body>
 </html>
