Changing name to PluginInstaller

--- a/CreativeDeveloperTools_UXP/index.html
+++ b/CreativeDeveloperTools_UXP/index.html
@@ -31,7 +31,7 @@ body {
 <sp-body>
   <div class="wrapper">
     <h2>Creative Developer Tools for UXP Sample Extension</h2>
-    <p>If nothing seems to work, please make sure you have activated this computer by way of the License Manager, and verify the daemon is running</p>
+    <p>If nothing seems to work, please make sure you have activated this computer by way of the PluginInstaller, and verify the daemon is running</p>
     <sp-div>
     <sp-label>crdtuxp.machineGUID()</sp-label>
     <sp-body id="machineGUID_out"></sp-body>
