Integrate APID ToolAssistant

--- a/CreativeDeveloperTools_UXP/index.html
+++ b/CreativeDeveloperTools_UXP/index.html
@@ -71,6 +71,12 @@ body {
     <sp-body id="dQ_out"></sp-body>
     <hr>
     </sp-div>
+    <sp-div id="evalTQL_panel">
+    <sp-label>uxpContext.app.evalTQL(s)</sp-label>
+    <sp-textfield id="evalTQL_in"></sp-textfield>
+    <sp-body id="evalTQL_out"></sp-body>
+    <hr>
+    </sp-div>
   </div>
 </sp-body>
 </html>
